# Second-Brain-App-Lite

./: .env.example  .gitignore  LICENSE  README.md  cover-image.html  index.html  package-lock.json  package.json  run-wiki.bat  run-wiki.sh  tsconfig.json  vite.config.ts
docs/: chat-personas.md  corporate-cursor-ingest.md  tauri-fs-cursor-archive.md
scripts/: cleanup-old-target-logs.ps1  cleanup-old-target-logs.sh  install-deps.bat  install-deps.sh
src/: App.tsx  globals.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: CLAUDE.md
src-tauri/src/: atomic.rs  chat.rs  config.rs  cursor_archive.rs  extract.rs  extract_diagrams.rs  extract_image.rs  extract_notebook.rs  extract_pptx.rs  extract_tabular.rs  ingest.rs  lib.rs  llm.rs  manifest.rs  paths.rs  personas.rs  retrieval.rs  secrets.rs  sessions.rs  web_compile.rs  wiki.rs
src/components/layout/: app-shell.tsx  mode-toggle.tsx  sidebar.tsx  theme-provider.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  copy-button.tsx  input.tsx  label.tsx  select.tsx  textarea.tsx  toast.tsx
src/hooks/: useChatSession.ts  useConfig.ts  useConfig.tsx  useIngest.ts
src/lib/: llm-display.ts  personas.ts
src/types/: index.ts
src/views/Chat/: index.tsx
src/views/Ingest/: index.tsx
src/views/Settings/: index.tsx
tests/fixtures/cursor/: minimal.jsonl
vendor-notes/: llm-wiki-fork-cursor-fixture.md
