[package]
name = "second-brain-lite"
version = "0.1.0"
description = "Second Brain Lite — local wiki ingest and chat"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[features]
default = []
vision-svg-render = ["dep:resvg", "dep:usvg", "dep:tiny-skia"]

[dependencies]
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
anyhow = "1.0"
thiserror = "2.0"
dirs = "6.0"
walkdir = "2"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "time"] }
futures-util = "0.3"
tokio-stream = "0.1"
serde_yaml = "0.9"
pdf-extract = "0.10"
html2text = "0.17"
csv = "1.3"
calamine = { version = "0.26", features = ["dates"] }
quick-xml = "0.37"
zip = { version = "2", default-features = false, features = ["deflate"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "bmp", "tiff"] }
infer = "0.19"
resvg = { version = "0.44", optional = true }
usvg = { version = "0.44", optional = true }
tiny-skia = { version = "0.11", optional = true }

